--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -190,38 +190,38 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於密室逃脫</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
                         <li>最新消息</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於許多門</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
                         <li>主題介紹</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
                         <li>收費方式</li>
                     </a>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於密室逃脫</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
                         <li>最新消息</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於許多門</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
                         <li>主題介紹</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
                         <li>收費方式</li>
                     </a>
                 </ul>
