--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -160,38 +160,38 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於密室逃脫</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
                         <li>最新消息</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於許多門</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
                         <li>主題介紹</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
                         <li>收費方式</li>
                     </a>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於密室逃脫</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
                         <li>最新消息</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
                         <li>關於許多門</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
                         <li>主題介紹</li>
                     </a>
-                    <a href="">
+                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
                         <li>收費方式</li>
                     </a>
                 </ul>
@@ -202,7 +202,7 @@
     <section class="pc">
         <div style="padding: 0;" class="container-fluid">
             <div class="banner police">
-                <p><a href="">逆<span class="turn">轉</span>偵訊室</a> </p>
+                <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span class="turn">轉</span>偵訊室</a> </p>
             </div>
             <div class="banner bomb">
                 <p><a href="">爆彈拆除班</a></p>
