--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -144,40 +144,20 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
-                        <li>關於密室逃脫</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
-                        <li>最新消息</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
-                        <li>關於許多門</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
-                        <li>主題介紹</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
-                        <li>收費方式</li>
-                    </a>
+                        <li> <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a</li>        
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
-                        <li>關於密室逃脫</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-news.html">
-                        <li>最新消息</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">
-                        <li>關於許多門</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">
-                        <li>主題介紹</li>
-                    </a>
-                    <a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">
-                        <li>收費方式</li>
-                    </a>
+                    <li> <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a</li>        
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
         </nav>
