--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -190,8 +190,8 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                        <li> <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a</li>        
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
+                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
                         <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
                         <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
                         <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
@@ -199,12 +199,12 @@
             </div>
             <div class="ham mobile">
                 <ul>
-                    <li> <a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a</li>        
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
                     <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
                     <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
                     <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
-                </ul>
+            </ul>
             </div>
         </nav>
     </header>
