--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -142,34 +142,41 @@
                 font-size: 14px;
             }
 
-            .title{
+            .title {
                 font-size: 48px;
             }
-            .logo-white-width{
+
+            .logo-white-width {
                 width: 50px;
             }
-            .bannerSize{
+
+            .bannerSize {
                 height: 203px;
             }
-            h2{
+
+            h2 {
                 font-size: 24px;
                 line-height: 35px;
             }
-            .LH-48{
+
+            .LH-48 {
                 line-height: 35px;
             }
-            .narrative{
+
+            .narrative {
                 padding: 50px;
             }
-            .aboutES-open{
+
+            .aboutES-open {
                 height: unset;
-                padding:0 0 40px 0;
+                padding: 0 0 40px 0;
             }
 
             .mtb-200 {
                 margin: 75px 0;
             }
-            .mt-200{
+
+            .mt-200 {
                 margin-top: 75px;
             }
 
@@ -190,21 +197,21 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
                     <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
-            </ul>
+                </ul>
             </div>
         </nav>
     </header>
