--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -144,21 +144,21 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
-                        <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>               
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">>最新消息</a></li>        
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html"></a>關於許多門</a></li> 
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>          
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於密室逃脫</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
                     <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
-            </ul>
+                </ul>
             </div>
         </nav>
     </header>
