--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -198,7 +198,7 @@
             <div class="swiper-wrapper ">
                 <div class="swiper-slide">
                     <div class="col-12 phoneBanner police">
-                        <p><a href="">逆<span class="turn">轉</span><br>偵訊室</a> </p>
+                        <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span class="turn">轉</span><br>偵訊室</a> </p>
                     </div>
                 </div>
                 <div class="swiper-slide">
