--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -299,7 +299,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12 d-flex justify-content-center"><img src="img/key.png" alt=""></div>
                 <p class="titleName">企業培訓</p>
-                <img style="margin: 50px 0;" class="mobile" width="100%" src="img/aboutE-people.jpg" alt="">
+                <img style="margin: 50px 0;" class="mobile" width="100%" height="100%" src="img/aboutE-people.jpg" alt="">
             </div>
         </div>
     </section>
