--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -31,6 +31,7 @@
             margin-bottom: 150px;
             display: flex;
             justify-content: center;
+            cursor:pointer;
         }
 
         .card {
