--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -54,10 +54,14 @@
             background-image: url(img/back.png);
             background-repeat: no-repeat;
         }
-
-        .flipped {
+        .card_box:hover{
             transform: rotateY(180deg);
         }
+
+
+        /* .flipped {
+            transform: rotateY(180deg);
+        } */
 
         @media (max-width: 576px) {
             .pc {
@@ -275,9 +279,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
 
-        $(".card_box").hover(function (event) {
-            $(this).toggleClass("flipped");
-        })
+        // $(".card_box").hover(function (event) {
+        //     $(this).toggleClass("flipped");
+        // })
     </script>
 </body>
 
