--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -117,6 +117,7 @@
 
             .logo-white-width {
                 width: 50px;
+                height: 50px;
             }
 
             .toll-mb {
@@ -171,7 +172,7 @@
     <section class="mtb-200">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-4 col-lg-1 d-flex justify-content-center"><img class="logo-white-width"
+                <div class="col-2 col-lg-1 d-flex justify-content-center"><img class="logo-white-width"
                         src="img/logo-white.png" alt=""></div>
                 <div class="col-8 col-lg-4 d-flex justify-content-center">
                     <p class="title">最新消息</p>
