--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -160,20 +160,20 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/ES-news.html">最新消息</a></li>
+                    <li><a href="/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/ES-news.html">最新消息</a></li>
+                    <li><a href="/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
         </nav>
@@ -185,7 +185,7 @@
                 <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span class="turn">轉</span>偵訊室</a> </p>
             </div>
             <div class="banner bomb">
-                <p><a href="">爆彈拆除班</a></p>
+                <p><a href="/ES-theme-police.html">爆彈拆除班</a></p>
             </div>
             <div class="banner doctor">
                 <p><a href="">御醫</a></p>
