--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -244,20 +244,20 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-news.html">最新消息</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-theme.html">主題介紹</a></li>
-                    <li><a href="https://doorsss.github.io/EscapeRoom/ES-fee.html">收費方式</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
         </nav>
