--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -83,6 +83,7 @@
 
             .logo-white-width {
                 width: 50px;
+                height: 52px;
             }
 
             .toll-mb {
@@ -138,9 +139,8 @@
     <section class="mtb-200">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-2 col-lg-1 d-flex justify-content-center"><img class="logo-white-width"
-                        src="img/logo-white.png" alt=""></div>
-                <div class="col-8 col-lg-4 d-flex justify-content-center">
+                <div class="col-2 col-lg-1"><img class="logo-white-width" src="img/logo-white.png" alt=""></div>
+                <div class="col-9 col-lg-5">
                     <p class="title">收費方式</p>
                 </div>
             </div>
