--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -118,6 +118,7 @@
 
             .logo-white-width {
                 width: 50px;
+                height: 52px;
             }
 
             .toll-mb {
