--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -42,6 +42,7 @@
             backface-visibility: hidden;
             background-color: #23220C;
             border: unset;
+            cursor: pointer;
         }
 
         .front {
