--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -293,7 +293,7 @@
             $(this).toggleClass("flipped");
         });
 
-        $(".card_box").click(function (event) {
+        $(".card").click(function (event) {
             $(this).toggleClass("flippedPhone")
         })
     </script>
