--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -144,6 +144,9 @@
 
             .flippedPhone {
                 transform: rotateY(180deg);
+                position: relative;
+                z-index: 2;
+
             }
 
         }
