--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -296,7 +296,7 @@
             $(this).toggleClass("flipped");
         });
 
-        $(".card").click(function (event) {
+        $(".card_box").click(function (event) {
             $(this).toggleClass("flippedPhone")
         })
     </script>
