--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -297,7 +297,7 @@
         });
 
         $(".card_box").click(function (event) {
-            $(this).toggleClass("flippedPhone")
+            $("card").toggleClass("flippedPhone")
         })
     </script>
 </body>
