--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -179,6 +179,10 @@
             .mt-200 {
                 margin-top: 75px;
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
 
 
