--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -198,6 +198,10 @@
             .what{
                 margin-bottom: 50px;
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
         }
     </style>
