--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -145,6 +145,10 @@
             .flippedPhone {
                 transform: rotateY(180deg);
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
         }
     </style>
