--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -229,6 +229,10 @@
             .mt-75-phone {
                 margin-top: 75px;
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
         }
     </style>
