--- a/EscapeRoom/footer.html
+++ b/EscapeRoom/footer.html
@@ -147,6 +147,10 @@
             .info {
                 font-size: 14px;
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
         }
     </style>
