--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -145,6 +145,10 @@
                 text-decoration: none;
 
             }
+            .gotop{
+                right: 30px;
+                bottom: 30px;
+            }
 
         }
     </style>
