--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -51,6 +51,10 @@
         }
 
         .back {
+            -ms-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
             background-image: url(img/back.png);
             background-repeat: no-repeat;
@@ -62,6 +66,10 @@
 
 
         .flipped {
+            -ms-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
         }
 
@@ -139,13 +147,22 @@
             }
 
             .flipped {
+                -ms-transform: unset;
+                -o-transform:unset;
+                -moz-transform: unset;
+                -webkit-transform: unset;
                 transform: unset;
             }
 
             .flippedPhone {
+                -ms-transform: rotateY(180deg);
+                -o-transform: rotateY(180deg);
+                -moz-transform: rotateY(180deg);
+                -webkit-transform: rotateY(180deg);
                 transform: rotateY(180deg);
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
