--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -89,6 +89,20 @@
             margin: 200px 0;
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 577px) {
 
             .container {
@@ -179,7 +193,8 @@
             .mt-200 {
                 margin-top: 75px;
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
