--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -85,6 +85,20 @@
 
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 576px) {
             .pc {
                 display: none;
@@ -131,7 +145,9 @@
 
             .info {
                 font-size: 14px;
-            }.banner{
+            }
+
+            .banner {
                 height: 578px;
 
             }
@@ -156,7 +172,8 @@
                 top: -50px;
                 left: 48%;
             }
-            .titleName{
+
+            .titleName {
                 font-size: 24px;
             }
 
@@ -169,14 +186,17 @@
                 line-height: 2;
                 margin-bottom: 50px;
             }
-            .team{
+
+            .team {
                 background-image: unset;
                 height: unset;
             }
-            .mt-75{
+
+            .mt-75 {
                 margin-top: 50px;
             }
-            .mb-150{
+
+            .mb-150 {
                 margin-bottom: unset;
             }
 
@@ -192,13 +212,15 @@
                 margin-bottom: 75px;
             }
 
-            .phone{
+            .phone {
                 display: none;
             }
-            .what{
+
+            .what {
                 margin-bottom: 50px;
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
@@ -303,7 +325,8 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12 d-flex justify-content-center"><img src="img/key.png" alt=""></div>
                 <p class="titleName">企業培訓</p>
-                <img style="margin: 50px 0;" class="mobile" width="100%" height="100%" src="img/aboutE-people.jpg" alt="">
+                <img style="margin: 50px 0;" class="mobile" width="100%" height="100%" src="img/aboutE-people.jpg"
+                    alt="">
             </div>
         </div>
     </section>
