--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -73,6 +73,20 @@
             transform: rotateY(180deg);
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 576px) {
             .pc {
                 display: none;
@@ -148,7 +162,7 @@
 
             .flipped {
                 -ms-transform: unset;
-                -o-transform:unset;
+                -o-transform: unset;
                 -moz-transform: unset;
                 -webkit-transform: unset;
                 transform: unset;
