--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -117,6 +117,20 @@
             }
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 576px) {
             .pc {
                 display: none;
@@ -229,7 +243,8 @@
             .mt-75-phone {
                 margin-top: 75px;
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
