--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -60,6 +60,7 @@
         .phoneStyle {
             display: none;
         }
+
         .turn {
             display: inline-block;
             transform: rotateY(180deg);
@@ -70,6 +71,7 @@
             animation-fill-mode: forwards;
 
         }
+
         @keyframes turn {
             0% {
                 transform: rotateY(180deg);
@@ -78,6 +80,20 @@
             100% {
                 transform: rotateY(540deg);
             }
+        }
+
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
         }
 
         @media (max-width: 576px) {
@@ -145,7 +161,8 @@
                 text-decoration: none;
 
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
@@ -186,7 +203,8 @@
     <section class="pc">
         <div style="padding: 0;" class="container-fluid">
             <div class="banner police">
-                <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span class="turn">轉</span>偵訊室</a> </p>
+                <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span
+                            class="turn">轉</span>偵訊室</a> </p>
             </div>
             <div class="banner bomb">
                 <p><a href="">爆彈拆除班</a></p>
@@ -202,7 +220,8 @@
             <div class="swiper-wrapper ">
                 <div class="swiper-slide">
                     <div class="col-12 phoneBanner police">
-                        <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span class="turn">轉</span><br>偵訊室</a> </p>
+                        <p><a href="https://doorsss.github.io/EscapeRoom/ES-theme-police.html">逆<span
+                                    class="turn">轉</span><br>偵訊室</a> </p>
                     </div>
                 </div>
                 <div class="swiper-slide">
