--- a/EscapeRoom/footer.html
+++ b/EscapeRoom/footer.html
@@ -100,6 +100,20 @@
             bottom: 61px;
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 576px) {
             .pc {
                 display: none;
@@ -147,7 +161,8 @@
             .info {
                 font-size: 14px;
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
