--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -29,6 +29,20 @@
             margin-bottom: 200px;
         }
 
+        @media(max-width:1420 px) {
+            .nav {
+                padding: 0 150px;
+            }
+
+        }
+
+        @media(max-width:1205 px) {
+            .nav {
+                padding: 0 50px;
+            }
+
+        }
+
         @media (max-width: 576px) {
             .pc {
                 display: none;
@@ -101,7 +115,8 @@
             .mb-200 {
                 margin-bottom: 75px;
             }
-            .gotop{
+
+            .gotop {
                 right: 30px;
                 bottom: 30px;
             }
