--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -61,6 +61,10 @@
         }
 
         /* .card_box:hover{
+            -ms-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
         } */
 
