--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -15,10 +15,10 @@
     <style>
         .banner {
             width: 100%;
-            height: 333px;
+            height: calc(39vh - 80px);
             font-size: 120px;
             text-align: center;
-            line-height: 333px;
+            line-height: calc(33vh - 80px);
             transition: 1s;
             color: #ffffff;
 
@@ -53,8 +53,8 @@
         }
 
         .banner:hover {
-            height: 980px;
-            line-height: 980px;
+            height: calc(80vh - 80px);
+            line-height: calc(80vh - 80px);
         }
 
         .phoneStyle {
