--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -29,7 +29,7 @@
         .bannerSize {
             margin: unset;
             width: 100%;
-            height: 517px;
+            object-fit:cover;
         }
 
         h2 {
@@ -165,7 +165,7 @@
             }
 
             .bannerSize {
-                height: 203px;
+                /* height: 360px; */
             }
 
             h2 {
@@ -254,6 +254,10 @@
                 <div class="swiper-wrapper ">
                     <div class="swiper-slide"><img class="bannerSize" src="img/ES-1.jpg" alt=""></div>
                     <div class="swiper-slide"><img class="bannerSize" src="img/ES-2.jpg" alt=""></div>
+                    <div class="swiper-slide"><img class="bannerSize" src="img/ES-3.jpg" alt=""></div>
+                    <div class="swiper-slide"><img class="bannerSize" src="img/ES-4.jpg" alt=""></div>
+                    <div class="swiper-slide"><img class="bannerSize" src="img/ES-5.jpg" alt=""></div>
+                    <div class="swiper-slide"><img class="bannerSize" src="img/ES-6.jpg" alt=""></div>
                 </div>
                 <!-- Add Arrows -->
                 <div class="swiper-button-next"></div>
