--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -29,6 +29,7 @@
         .bannerSize {
             margin: unset;
             width: 100%;
+            height: 517px;
             object-fit:cover;
         }
 
@@ -165,7 +166,7 @@
             }
 
             .bannerSize {
-                /* height: 360px; */
+                height: unset;
             }
 
             h2 {
