--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -122,6 +122,9 @@
                 transform: translateY(-50%);
                 z-index: 20;
             }
+            .title{
+                font-size: 48px;
+            }
 
             .ham ul {
                 position: absolute;
@@ -263,7 +266,10 @@
         <div class="container">
             <div class="row d-flex align-items-center">
                 <div class="col-lg-12">
-                    <p class="title">何謂<br>密室逃脫</p>
+                    <p class="title">何謂</p>
+                </div>
+                <div class="col-lg-12">
+                    <p class="title">密室逃脫</p>
                 </div>
             </div>
         </div>
