--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -296,17 +296,17 @@
             <div class="information d-flex align-items-center">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 col-12 d-sm-flex align-items-center justify-content-center d-none">
+                        <div class="col-lg-4 d-sm-flex align-items-center justify-content-center d-none">
                             <img src="img/logo.png" alt="">
                             <b class="logoName">許多門</b>
                             <p class="gameName">ESCAPE <br>STUDIOS </p>
                         </div>
-                        <div class="col-lg-7 col-8">
+                        <div class="col-lg-7 col-9">
                             <b class="info">台中市西區公益路155巷9號2樓（公益路勤美誠品斜對面）<br> TEL 04-23020080
                                 /
                                 0971283166</b>
                         </div>
-                        <div class="col-lg-1 col-4 d-flex align-items-center justify-content-center">
+                        <div class="col-lg-1 col-3 d-flex align-items-center justify-content-center">
                             <a href="https://www.facebook.com/TCDOORSSS"><img src="img/fb-logo.png" alt=""></a>
                         </div>
                     </div>
