--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -124,10 +124,11 @@
             }
 
             .ham {
-                width: 30px;
-                height: 30px;
+                width: 40px;
+                height: 40px;
                 position: relative;
                 background-image: url(img/navHam.png);
+                background-size: cover;
                 top: 50%;
                 transform: translateY(-50%);
                 z-index: 20;
