--- a/EscapeRoom/test/開場.html
+++ b/EscapeRoom/test/開場.html
@@ -155,6 +155,14 @@
                 width: 768px;
             }
         }
+        @media (max-width: 576px){
+            body{
+                transform: rotate(90deg);
+            }
+            .container{
+                width: 576px;
+            }
+        }
     </style>
 </head>
 
