--- a/EscapeRoom/ES-theme.html
+++ b/EscapeRoom/ES-theme.html
@@ -162,6 +162,13 @@
                 text-decoration: none;
 
             }
+            .bomb{
+                background-position: 30% 0%;
+            }
+            .doctor{
+                background-position: center;
+            }
+            
 
             .gotop {
                 right: 30px;
