--- a/EscapeRoom/footer.html
+++ b/EscapeRoom/footer.html
@@ -183,40 +183,20 @@
             </div>
             <div class="nav-btn-group pc">
                 <ul>
-                    <a href="">
-                        <li>關於密室逃脫</li>
-                    </a>
-                    <a href="">
-                        <li>最新消息</li>
-                    </a>
-                    <a href="">
-                        <li>關於許多門</li>
-                    </a>
-                    <a href="">
-                        <li>主題介紹</li>
-                    </a>
-                    <a href="">
-                        <li>收費方式</li>
-                    </a>
+                    <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
             <div class="ham mobile">
                 <ul>
-                    <a href="">
-                        <li>關於密室逃脫</li>
-                    </a>
-                    <a href="">
-                        <li>最新消息</li>
-                    </a>
-                    <a href="">
-                        <li>關於許多門</li>
-                    </a>
-                    <a href="">
-                        <li>主題介紹</li>
-                    </a>
-                    <a href="">
-                        <li>收費方式</li>
-                    </a>
+                    <li><a href="/EscapeRoom/ES-aboutEscape.html">關於密室逃脫</a></li>
+                    <li><a href="/EscapeRoom/ES-news.html">最新消息</a></li>
+                    <li><a href="/EscapeRoom/ES-aboutES.html">關於許多門</a></li>
+                    <li><a href="/EscapeRoom/ES-theme.html">主題介紹</a></li>
+                    <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
         </nav>
