--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -192,7 +192,7 @@
 
 <body>
     <header>
-        <nav id="navbar" class="nav d-flex justify-content-between">
+        <a href="/EscapeRoom/index.html"><nav id="navbar" class="nav d-flex justify-content-between">
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img src="img/logo.png" alt="">
                 <b class="logoName">許多門</b>
@@ -216,7 +216,7 @@
                     <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
-        </nav>
+        </nav></a>
     </header>
 
     <section class="mtb-200">
