--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -128,7 +128,7 @@
 
 <body>
     <header>
-        <nav id="navbar" class="nav d-flex justify-content-between">
+        <a href="/EscapeRoom/index.html"><nav id="navbar" class="nav d-flex justify-content-between">
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img src="img/logo.png" alt="">
                 <b class="logoName">許多門</b>
@@ -152,7 +152,7 @@
                     <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
-        </nav>
+        </nav></a>
     </header>
 
 
