--- a/EscapeRoom/index.html
+++ b/EscapeRoom/index.html
@@ -177,7 +177,7 @@
     <div class="bg">
         <div class="container">
             <div id="scene" class="scene">
-                <div class="" data-depth="0.10"><a href="/EscapeRoom/ES-theme.html"><img src="parallax-img/gamename.png"></a></div>
+                <div class="z5" data-depth="0.10"><a href="/EscapeRoom/ES-theme.html"><img src="parallax-img/gamename.png"></a></div>
                 <div class="z1 " data-depth="0.20"><img src="parallax-img/door1.png"></div>
                 <div class="z3 animation_degZ" data-depth="2.40"><img src="parallax-img/door2.png"></div>
                 <div class="z3" data-depth="0.60"><img src="parallax-img/door3.png"></div>
