--- a/EscapeRoom/ES-aboutEscape.html
+++ b/EscapeRoom/ES-aboutEscape.html
@@ -235,11 +235,11 @@
 
 <body>
     <header>
-        <a href="/EscapeRoom/index.html"><nav id="navbar" class="nav d-flex justify-content-between">
+        <nav id="navbar" class="nav d-flex justify-content-between">
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img src="img/logo.png" alt="">
-                <b class="logoName">許多門</b>
-                <p class="gameName">ESCAPE <br>STUDIOS </p>
+                <b class="logoName"><a href="/EscapeRoom/ES-theme.html">許多門</a></b>
+                <p class="gameName"></p><a href="/EscapeRoom/ES-theme.html">ESCAPE <br>STUDIOS </a></p>
             </div>
             <div class="nav-btn-group pc">
                 <ul>
@@ -259,9 +259,8 @@
                     <li><a href="/EscapeRoom/ES-fee.html">收費方式</a></li>
                 </ul>
             </div>
-        </nav></a>
+        </nav>
     </header>
-
 
     <section class="container-fluid banner d-flex align-items-center">
         <div class="container">
