--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -195,8 +195,8 @@
         <nav id="navbar" class="nav d-flex justify-content-between">
             <div class="navLogo lg-4 d-flex align-items-center justify-content-center">
                 <img src="img/logo.png" alt="">
-                <b class="logoName"><a href="/EscapeRoom/ES-theme.html">許多門</a></b>
-                <p class="gameName"></p><a href="/EscapeRoom/ES-theme.html">ESCAPE <br>STUDIOS </a></p>
+                <b class="logoName"><a href="/EscapeRoom/index.html">許多門</a></b>
+                <p class="gameName"></p><a href="/EscapeRoom/index.html">ESCAPE <br>STUDIOS </a></p>
             </div>
             <div class="nav-btn-group pc">
                 <ul>
