--- a/EscapeRoom/index.html
+++ b/EscapeRoom/index.html
@@ -179,7 +179,8 @@
 
         @media (max-width: 576px) {
             body {
-                transform: rotate(90deg);
+                transform:translateY(-10%) rotate(90deg);
+                
             }
             .bg{
                 width: 150%;
